--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,15 @@ __pycache__/
 # C extensions
 *.so
 
+# DS Store
+.DS_Store
+
+# Env
+.env
+
+# Environments
+.venv
+
 # Distribution / packaging
 .Python
 build/
